[gd_scene load_steps=5 format=3 uid="uid://dvx0vpgdq47ba"]

[ext_resource type="Script" uid="uid://07xoso5ixu4o" path="res://Components/component_movement.gd" id="1_q1yae"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ja4lf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hihvi"]
size = Vector3(1, 1.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_q0lp6"]
size = Vector3(0.8, 0.8, 0.1)

[node name="Component_Movement" type="Node3D"]
script = ExtResource("1_q1yae")

[node name="Timer_Idle_Move" type="Timer" parent="."]

[node name="Timer_Fallen_Delay" type="Timer" parent="."]

[node name="Timer_Move_Left_Delay" type="Timer" parent="."]

[node name="Timer_Move_Right_Delay" type="Timer" parent="."]

[node name="Area_Main" type="Area3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area_Main"]
shape = SubResource("BoxShape3D_ja4lf")

[node name="Area_Main_Cushion" type="Area3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area_Main_Cushion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("BoxShape3D_hihvi")

[node name="Area_Bottom" type="Area3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area_Bottom"]
shape = SubResource("BoxShape3D_q0lp6")

[node name="RotationTweens" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="DownwardTweens" type="Node3D" parent="."]
unique_name_in_owner = true
